// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link activeClassName? 1`] = `
"<a
  activeClassName=\\"activeCx\\"
  className=\\"activeCx\\"
  href=\\"/internal\\"
  onClick={function noRefCheck() {}}
  onKeyDown={function noRefCheck() {}}
>
  c
</a>"
`;

exports[`Link activeClassName? 2`] = `
"<a
  activeClassName=\\"activeCx\\"
  href=\\"/internal\\"
  onClick={function noRefCheck() {}}
  onKeyDown={function noRefCheck() {}}
>
  c
</a>"
`;

exports[`Link activeStyle? 1`] = `
"<a
  activeStyle={{
    color: 'blue'
  }}
  href=\\"/internal\\"
  onClick={function noRefCheck() {}}
  onKeyDown={function noRefCheck() {}}
  style={{
    color: 'blue'
  }}
>
  c
</a>"
`;

exports[`Link activeStyle? 2`] = `
"<a
  activeStyle={{
    color: 'blue'
  }}
  href=\\"/internal\\"
  onClick={function noRefCheck() {}}
  onKeyDown={function noRefCheck() {}}
>
  c
</a>"
`;

exports[`Link works with \`\`href\`\` 1`] = `
"<a
  href=\\"/b\\"
  onClick={function noRefCheck() {}}
  onKeyDown={function noRefCheck() {}}
>
  c
</a>"
`;

exports[`Link works with \`\`to\`\` 1`] = `
"<a
  href=\\"/b\\"
  onClick={function noRefCheck() {}}
  onKeyDown={function noRefCheck() {}}
>
  c
</a>"
`;

exports[`Link works with external \`\`href\`\` 1`] = `
"<a
  href=\\"http://b.com\\"
  onClick={function noRefCheck() {}}
  onKeyDown={function noRefCheck() {}}
>
  c
</a>"
`;

exports[`Link works with external \`\`href\`\` 2`] = `
"<a
  href=\\"http://b.com\\"
  onClick={function noRefCheck() {}}
  onKeyDown={function noRefCheck() {}}
>
  c
</a>"
`;

exports[`Link works with internal \`\`href\`\` 1`] = `
"<a
  href=\\"test://url.tld/internal\\"
  onClick={function noRefCheck() {}}
  onKeyDown={function noRefCheck() {}}
>
  c
</a>"
`;

exports[`Link works with internal \`\`href\`\` 2`] = `
"<a
  href=\\"/internal\\"
  onClick={function noRefCheck() {}}
  onKeyDown={function noRefCheck() {}}
>
  c
</a>"
`;
